k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beeyield
---
apiVersion: v1
kind: Namespace
metadata:
  name: beeyield-prod
